# discord-moderator-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: blacklist.json.template  warnings.json.template
src/: discoviews.py  mybot.py
tests/: test_mybot.py
