[tool.poetry]
name = "discord-moderator-bot"
version = "0.1.0"
description = "A Discord moderator bot for managing server moderation tasks."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
discord.py = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"